refactor(hardening): ETag on GET, simple pagination, idempotent POST and structure request logs